# skillix-hub

./: .gitignore  README.md  README_EN.md  pyrightconfig.json  records.txt  userinput.py
skills/agent-workflow/: .skillignore  README.md  README_EN.md  SKILL.md  pyproject.toml  requirements.txt  run-opencode.sh  tool.py
skills/agent-workflow/examples/: agent-with-role.yaml  code-review.yaml  cross-llm-pipeline.yaml  iterative-refine.yaml  research-and-implement.yaml
skills/agent-workflow/lib/: __init__.py  engine.py  errors.py  logger.py  parser.py  project_root.py  store.py  template.py
skills/agent-workflow/lib/builder/: scaffold.py
skills/agent-workflow/lib/executors/: base.py  caller.py  mock.py  registry.py
skills/agent-workflow/lib/nodes/: agent_call.py  loop.py  sleep.py  wait_user.py
skills/agent-workflow/lib/view/: render.py
skills/agent-workflow/schemas/: workflow.schema.json
skills/knowledge-compiler/: SKILL.md  config.json  main.py  pyproject.toml
skills/knowledge-compiler/commands/: kc-add.md  kc-browse.md  kc-compile.md  kc-init.md  kc-lint.md  kc-query.md  kc-status.md
skills/knowledge-compiler/prompts/: classify_topics.md  compile_article.md
skills/knowledge-compiler/references/: coverage-tags.md  quality-gates.md
skills/knowledge-compiler/skills/: wiki-compiler.md
skills/knowledge-compiler/src/: classifier.py  common.py  compiler.py  indexer.py  merger.py  scanner.py  schema.py  state.py  verifier.py
skills/knowledge-compiler/src/commands/: __init__.py  add.py  browse.py  compile.py  init.py  lint.py  query.py  status.py
skills/knowledge-compiler/src/session/: injector.py
skills/knowledge-compiler/templates/: article.md  index.md  schema.md
(+854 files in other folders)
