[project]
name = "knowledge-compiler"
version = "0.1.0"
description = "Compile team knowledge into a structured, coverage-tracked Wiki."
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
